Document cal-html-holidays
* doc/emacs/calendar.texi (Writing Calendar Files): Mention cal-html-holidays.

* etc/NEWS: Related edit.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-08  Glenn Morris  <rgm@gnu.org>
+
+	* calendar.texi (Writing Calendar Files): Mention cal-html-holidays.
+
 2012-10-06  Glenn Morris  <rgm@gnu.org>
 
 	* calendar.texi (Writing Calendar Files): Tweak week descriptions.
