--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-08  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32fns.c (w32_color_map_lookup, x_to_w32_color): Argument is now
+	'const char *'.
+	(x_to_w32_color): Don't modify the argument, modify a copy instead.
+
 2012-10-08  Daniel Colascione  <dancol@dancol.org>
 
 	* image.c: Permanent fix for JPEG compilation issue --- limit
