* lisp/emacs-lisp/cl-macs.el (cl-defstruct): Obey the :read-only property.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/cl-macs.el (cl-defstruct): Obey the :read-only property.
+
 2012-10-09  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	Implemented `backward-up-list'-like navigation.
@@ -20,8 +24,7 @@
 2012-10-08  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	Fix shell handling of unbalanced quotes and parens in output.
-	* progmodes/python.el (python-rx-constituents): Added
-	string-delimiter.
+	* progmodes/python.el (python-rx-constituents): Add string-delimiter.
 	(python-syntax-propertize-function): Use it.
 	(python-shell-output-syntax-table): New var.
 	(inferior-python-mode): Prevent unbalanced parens/quotes from
