Make cusver handle options moved from C to lisp
* admin/admin.el (cusver-scan-cus-start): New function.
(cusver-check): Scan old cus-start.el.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-09  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (cusver-scan-cus-start): New function.
+	(cusver-check): Scan old cus-start.el.
+
 2012-10-07  Glenn Morris  <rgm@gnu.org>
 
 	* admin.el (cusver-new-version): Set default.
