--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-09  Glenn Morris  <rgm@gnu.org>
 
+	* w32-fns.el (set-message-beep):
+	* term/w32-win.el (set-message-beep): Update declarations.
+
 	* newcomment.el (comment-normalize-vars): Doc fix (presumably).
 
 2012-10-09  Stefan Monnier  <monnier@iro.umontreal.ca>
