* net/tramp.el (tramp-debug-message): Remove "tramp-with-progress-reporter" from regexp of ignored functions. (with-tramp-progress-reporter): Rename from `tramp-with-progress-reporter'. (with-tramp-file-property, with-tramp-connection-property): Move from tramp-cache.el, rename from `with-file-property' and `with-connection-property', respectively.
* net/tramp-cache.el: Remove `with-file-property' and
`with-connection-property'.

* net/tramp.el:
* net/tramp-gvfs.el:
* net/tramp-sh.el:
* net/tramp-smb.el: Adapt callees.

* net/trampver.el: Update release number.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,23 @@
+2012-10-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-debug-message): Remove
+	"tramp-with-progress-reporter" from regexp of ignored functions.
+	(with-tramp-progress-reporter): Rename from
+	`tramp-with-progress-reporter'.
+	(with-tramp-file-property, with-tramp-connection-property): Move
+	from tramp-cache.el, rename from `with-file-property' and
+	`with-connection-property', respectively.
+
+	* net/tramp-cache.el: Remove `with-file-property' and
+	`with-connection-property'.
+
+	* net/tramp.el:
+	* net/tramp-gvfs.el:
+	* net/tramp-sh.el:
+	* net/tramp-smb.el: Adapt callees.
+
+	* net/trampver.el: Update release number.
+
 2012-10-09  Glenn Morris  <rgm@gnu.org>
 
 	* w32-fns.el (set-message-beep):
