--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* trampver.texi: Update release number.
+
 2012-10-06  Glenn Morris  <rgm@gnu.org>
 
 	* erc.texi: Include emacsver.texi, and use EMACSVER rather than
